@@ -116,15 +116,15 @@
                         <prism.text>t2k</prism.text>
                     </systemPropertyVariables>
                     <argLine>
-                        
-                        <!-- for headless environment -->
+
                         --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED
                         -Djava.awt.headless=true
                         -Dtestfx.robot=glass
                         -Dtestfx.headless=true
                         -Dprism.order=sw
-
+                        
                         --add-reads com.leave.engine=ALL-UNNAMED
                         --add-opens com.leave.engine/com.leave.engine=org.junit.platform.commons,javafx.fxml
                         --add-opens com.leave.engine/com.leave.engine.utils=org.junit.platform.commons,javafx.fxml
